--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     restart: always
     
   kafka:
-    image: kafka:latest
+    image: goodraincloudframeworks/kafka:latest
     restart: always
     links:
       - zookeeper:zookeeper
@@ -55,7 +55,7 @@ services:
     entrypoint: /opt/bin/start.sh
     
   akka-instream:
-    image: goodraincloudframeworks/smack-akka:1.0
+    image: goodraincloudframeworks/smack-akka:1.1
     restart: always
     ports:
       - 9090:9090
@@ -65,7 +65,7 @@ services:
     entrypoint: /opt/bin/start.sh instream
     
   akka-outstream:
-    image: goodraincloudframeworks/smack-akka:1.0
+    image: goodraincloudframeworks/smack-akka:1.1
     restart: always
     ports:
       - 9091:9091
